feat(config): add configurable chart library source

--- a/src/templates/chart.html
+++ b/src/templates/chart.html
@@ -51,8 +51,8 @@
 <body>
   <div id="chart-container"></div>
 
-  <!-- Include nocturna-wheel library from local server (v3.0.2) -->
-  <script src="https://github.com/eaprelsky/nocturna-wheel/releases/download/v3.0.2/nocturna-wheel.min.js"></script>
+  <!-- Include nocturna-wheel library - will be inlined by chartRenderer.service.js -->
+  <script src="/nocturna-wheel/nocturna-wheel.min.js"></script>
 
   <script>
     console.log('Starting chart rendering...');
